<6> serve static and docks
